activadas las notificaciones de travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,10 @@ python:
 install: "python setup.py install"
 # command to run tests, e.g. python setup.py test
 script:  "python setup.py test"
+
+notifications:
+  email:
+    recipients:
+      - imgarayojeda@gmail.com
+    on_success: always # default: change
+    on_failure: always # default: always
